--- a/source/_posts/搭建博客.md
+++ b/source/_posts/搭建博客.md
@@ -33,7 +33,7 @@ categories:
    # hexo s
    ```
 
-3) 发布第一篇文章
+3. 发布第一篇文章
 
    ```shell
    # 新增一篇文章
@@ -70,7 +70,7 @@ categories:
      repo: https://github.com/lyt9304/lyt9304.github.io.git
    ```
 
-4) 过一会儿访问对应的 github page 即可看到博客的内容
+4. 过一会儿访问对应的 github page 即可看到博客的内容
 
 ### 优化
 
