--- a/source/_posts/数据结构与算法之美 - 复杂度分析.md
+++ b/source/_posts/数据结构与算法之美 - 复杂度分析.md
@@ -52,7 +52,9 @@ categories:
   - `O(n^2)` / `O(n^3)` ... 平方阶、立方阶、k 次方阶
   - `O(m+n)` m 和 n 表示两个数据规模，事先无法判断，所以这里不能使用加法法则
   - `O(m*n)`
-- 非多项式量级 => NP 问题（Non-Deterministic Polynomial，非确定多项式） - `O(2^n)` 指数阶 - `O(n!)` 阶乘阶
+- 非多项式量级 => NP 问题（Non-Deterministic Polynomial，非确定多项式）
+  - `O(2^n)` 指数阶
+  - `O(n!)` 阶乘阶
 
 ### 2.4 空间复杂度分析
 
