feat: add content

--- a/source/_posts/数据结构与算法之美 - 链表.md
+++ b/source/_posts/数据结构与算法之美 - 链表.md
@@ -98,6 +98,13 @@ categories:
 - 删除链表倒数第 n 个结点
 - 求链表的中间结点
 
+要点总结：
+
+- 注意带头链表的好处，比如有序链表合并需要进行插入操作的时候
+- 链表的 O(n)解法，一般都要使用多个指针来简化过程，比如第 n 个结点可以用两个间隔为 n 的指针来维护；比如环检测中使用两个不同步幅的指针；比如求中间结点使用走一步和走两步的指针来完成 2 倍这个关系；
+- 指针间赋值顺序要注意，不然会丢失掉
+- 记得循环中，指针往前走需要 p = p.next，不然可能会无限循环
+
 ## 缓存
 
 ### 常用策略
